# django_todo

./: .gitignore  README.md  pyproject.toml
todo_project/: db.sqlite3  split_png.py  urls.py
todo_project/static/todo_app/css/: style.css
todo_project/static/todo_app/js/: timezone.js  toast.js
todo_project/todo_app/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
todo_project/todo_app/migrations/: 0001_initial.py  0002_remove_task_completed.py  0003_task_user.py  0004_alter_task_user.py  0005_category_task_category.py  0006_create_default_categories.py
todo_project/todo_app/templates/: add_category.html  add_task.html  base.html  login.html  register.html  task_list.html
todo_project/todo_app/tests/: test_models.py  test_userauth.py  test_views.py
